

static_library("wow_base") {
  sources = [
    "mpq.cc",
    "mpq.h",
    "dbcfile.cc",
    "dbcfile.h",
    "heightmap.cc",
    "heightmap.h",
    "tile.cc",
    "tile.h",
    "camera_control.cc",
    "camera_control.h",
  ]
  deps = [
    "//wow/stormlib:stormlib",
    "//wow/stormlib:storm",
    "//azer/render:render",
  ]
}