config("stormlib_config") {
  include_dirs = ["wow/stormlib/StormLib/src/"]
}

shared_library("stormlib") {
  sources = [
    "StormLib/src/StormCommon.h"
    "StormLib/src/StormLib.h"
    "StormLib/src/StormPort.h"
    "StormLib/src/adpcm/adpcm.h"
    "StormLib/src/huffman/huff.h"
    "StormLib/src/pklib/pklib.h"
    "StormLib/src/sparse/sparse.h"
    "StormLib/src/jenkins/lookup.h"
    "StormLib/src/FileStream.cpp"
    "StormLib/src/SBaseCommon.cpp"
    "StormLib/src/SBaseFileTable.cpp"
    "StormLib/src/SBaseSubTypes.cpp"
    "StormLib/src/SCompression.cpp"
    "StormLib/src/SFileAddFile.cpp"
    "StormLib/src/SFileAttributes.cpp"
    "StormLib/src/SFileCompactArchive.cpp"
    "StormLib/src/SFileCreateArchive.cpp"
    "StormLib/src/SFileExtractFile.cpp"
    "StormLib/src/SFileFindFile.cpp"
    "StormLib/src/SFileGetFileInfo.cpp"
    "StormLib/src/SFileListFile.cpp"
    "StormLib/src/SFileOpenArchive.cpp"
    "StormLib/src/SFileOpenFileEx.cpp"
    "StormLib/src/SFilePatchArchives.cpp"
    "StormLib/src/SFileReadFile.cpp"
    "StormLib/src/SFileVerify.cpp"
    "StormLib/src/adpcm/adpcm.cpp"
    "StormLib/src/bzip2/blocksort.c"
    "StormLib/src/bzip2/bzlib.c"
    "StormLib/src/bzip2/compress.c"
    "StormLib/src/bzip2/crctable.c"
    "StormLib/src/bzip2/decompress.c"
    "StormLib/src/bzip2/huffman.c"
    "StormLib/src/bzip2/randtable.c"
    "StormLib/src/huffman/huff.cpp"
    "StormLib/src/libtomcrypt/src/hashes/hash_memory.c"
    "StormLib/src/libtomcrypt/src/hashes/md5.c"
    "StormLib/src/libtomcrypt/src/hashes/sha1.c"
    "StormLib/src/libtomcrypt/src/math/ltm_desc.c"
    "StormLib/src/libtomcrypt/src/math/multi.c"
    "StormLib/src/libtomcrypt/src/math/rand_prime.c"
    "StormLib/src/libtomcrypt/src/misc/base64_decode.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_argchk.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_find_hash.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_find_prng.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_hash_descriptor.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_hash_is_valid.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_libc.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_ltc_mp_descriptor.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_prng_descriptor.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_prng_is_valid.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_register_hash.c"
    "StormLib/src/libtomcrypt/src/misc/crypt_register_prng.c"
    "StormLib/src/libtomcrypt/src/misc/zeromem.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_bit_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_boolean.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_choice.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_ia5_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_integer.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_object_identifier.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_octet_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_printable_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_sequence_ex.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_sequence_flexi.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_sequence_multi.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_short_integer.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_utctime.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_decode_utf8_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_bit_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_boolean.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_ia5_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_integer.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_object_identifier.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_octet_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_printable_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_sequence.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_short_integer.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_utctime.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_length_utf8_string.c"
    "StormLib/src/libtomcrypt/src/pk/asn1/der_sequence_free.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_map.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_mul2add.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_mulmod.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_points.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_projective_add_point.c"
    "StormLib/src/libtomcrypt/src/pk/ecc/ltc_ecc_projective_dbl_point.c"
    "StormLib/src/libtomcrypt/src/pk/pkcs1/pkcs_1_mgf1.c"
    "StormLib/src/libtomcrypt/src/pk/pkcs1/pkcs_1_oaep_decode.c"
    "StormLib/src/libtomcrypt/src/pk/pkcs1/pkcs_1_pss_decode.c"
    "StormLib/src/libtomcrypt/src/pk/pkcs1/pkcs_1_v1_5_decode.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_exptmod.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_free.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_import.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_make_key.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_verify_hash.c"
    "StormLib/src/libtomcrypt/src/pk/rsa/rsa_verify_simple.c"
    "StormLib/src/libtommath/bn_fast_mp_invmod.c"
    "StormLib/src/libtommath/bn_fast_mp_montgomery_reduce.c"
    "StormLib/src/libtommath/bn_fast_s_mp_mul_digs.c"
    "StormLib/src/libtommath/bn_fast_s_mp_mul_high_digs.c"
    "StormLib/src/libtommath/bn_fast_s_mp_sqr.c"
    "StormLib/src/libtommath/bn_mp_2expt.c"
    "StormLib/src/libtommath/bn_mp_abs.c"
    "StormLib/src/libtommath/bn_mp_add.c"
    "StormLib/src/libtommath/bn_mp_add_d.c"
    "StormLib/src/libtommath/bn_mp_addmod.c"
    "StormLib/src/libtommath/bn_mp_and.c"
    "StormLib/src/libtommath/bn_mp_clamp.c"
    "StormLib/src/libtommath/bn_mp_clear.c"
    "StormLib/src/libtommath/bn_mp_clear_multi.c"
    "StormLib/src/libtommath/bn_mp_cmp.c"
    "StormLib/src/libtommath/bn_mp_cmp_d.c"
    "StormLib/src/libtommath/bn_mp_cmp_mag.c"
    "StormLib/src/libtommath/bn_mp_cnt_lsb.c"
    "StormLib/src/libtommath/bn_mp_copy.c"
    "StormLib/src/libtommath/bn_mp_count_bits.c"
    "StormLib/src/libtommath/bn_mp_div.c"
    "StormLib/src/libtommath/bn_mp_div_2.c"
    "StormLib/src/libtommath/bn_mp_div_2d.c"
    "StormLib/src/libtommath/bn_mp_div_3.c"
    "StormLib/src/libtommath/bn_mp_div_d.c"
    "StormLib/src/libtommath/bn_mp_dr_is_modulus.c"
    "StormLib/src/libtommath/bn_mp_dr_reduce.c"
    "StormLib/src/libtommath/bn_mp_dr_setup.c"
    "StormLib/src/libtommath/bn_mp_exch.c"
    "StormLib/src/libtommath/bn_mp_expt_d.c"
    "StormLib/src/libtommath/bn_mp_exptmod.c"
    "StormLib/src/libtommath/bn_mp_exptmod_fast.c"
    "StormLib/src/libtommath/bn_mp_exteuclid.c"
    "StormLib/src/libtommath/bn_mp_fread.c"
    "StormLib/src/libtommath/bn_mp_fwrite.c"
    "StormLib/src/libtommath/bn_mp_gcd.c"
    "StormLib/src/libtommath/bn_mp_get_int.c"
    "StormLib/src/libtommath/bn_mp_grow.c"
    "StormLib/src/libtommath/bn_mp_init.c"
    "StormLib/src/libtommath/bn_mp_init_copy.c"
    "StormLib/src/libtommath/bn_mp_init_multi.c"
    "StormLib/src/libtommath/bn_mp_init_set.c"
    "StormLib/src/libtommath/bn_mp_init_set_int.c"
    "StormLib/src/libtommath/bn_mp_init_size.c"
    "StormLib/src/libtommath/bn_mp_invmod.c"
    "StormLib/src/libtommath/bn_mp_invmod_slow.c"
    "StormLib/src/libtommath/bn_mp_is_square.c"
    "StormLib/src/libtommath/bn_mp_jacobi.c"
    "StormLib/src/libtommath/bn_mp_karatsuba_mul.c"
    "StormLib/src/libtommath/bn_mp_karatsuba_sqr.c"
    "StormLib/src/libtommath/bn_mp_lcm.c"
    "StormLib/src/libtommath/bn_mp_lshd.c"
    "StormLib/src/libtommath/bn_mp_mod.c"
    "StormLib/src/libtommath/bn_mp_mod_2d.c"
    "StormLib/src/libtommath/bn_mp_mod_d.c"
    "StormLib/src/libtommath/bn_mp_montgomery_calc_normalization.c"
    "StormLib/src/libtommath/bn_mp_montgomery_reduce.c"
    "StormLib/src/libtommath/bn_mp_montgomery_setup.c"
    "StormLib/src/libtommath/bn_mp_mul.c"
    "StormLib/src/libtommath/bn_mp_mul_2.c"
    "StormLib/src/libtommath/bn_mp_mul_2d.c"
    "StormLib/src/libtommath/bn_mp_mul_d.c"
    "StormLib/src/libtommath/bn_mp_mulmod.c"
    "StormLib/src/libtommath/bn_mp_n_root.c"
    "StormLib/src/libtommath/bn_mp_neg.c"
    "StormLib/src/libtommath/bn_mp_or.c"
    "StormLib/src/libtommath/bn_mp_prime_fermat.c"
    "StormLib/src/libtommath/bn_mp_prime_is_divisible.c"
    "StormLib/src/libtommath/bn_mp_prime_is_prime.c"
    "StormLib/src/libtommath/bn_mp_prime_miller_rabin.c"
    "StormLib/src/libtommath/bn_mp_prime_next_prime.c"
    "StormLib/src/libtommath/bn_mp_prime_rabin_miller_trials.c"
    "StormLib/src/libtommath/bn_mp_prime_random_ex.c"
    "StormLib/src/libtommath/bn_mp_radix_size.c"
    "StormLib/src/libtommath/bn_mp_radix_smap.c"
    "StormLib/src/libtommath/bn_mp_rand.c"
    "StormLib/src/libtommath/bn_mp_read_radix.c"
    "StormLib/src/libtommath/bn_mp_read_signed_bin.c"
    "StormLib/src/libtommath/bn_mp_read_unsigned_bin.c"
    "StormLib/src/libtommath/bn_mp_reduce.c"
    "StormLib/src/libtommath/bn_mp_reduce_2k.c"
    "StormLib/src/libtommath/bn_mp_reduce_2k_l.c"
    "StormLib/src/libtommath/bn_mp_reduce_2k_setup.c"
    "StormLib/src/libtommath/bn_mp_reduce_2k_setup_l.c"
    "StormLib/src/libtommath/bn_mp_reduce_is_2k.c"
    "StormLib/src/libtommath/bn_mp_reduce_is_2k_l.c"
    "StormLib/src/libtommath/bn_mp_reduce_setup.c"
    "StormLib/src/libtommath/bn_mp_rshd.c"
    "StormLib/src/libtommath/bn_mp_set.c"
    "StormLib/src/libtommath/bn_mp_set_int.c"
    "StormLib/src/libtommath/bn_mp_shrink.c"
    "StormLib/src/libtommath/bn_mp_signed_bin_size.c"
    "StormLib/src/libtommath/bn_mp_sqr.c"
    "StormLib/src/libtommath/bn_mp_sqrmod.c"
    "StormLib/src/libtommath/bn_mp_sqrt.c"
    "StormLib/src/libtommath/bn_mp_sub.c"
    "StormLib/src/libtommath/bn_mp_sub_d.c"
    "StormLib/src/libtommath/bn_mp_submod.c"
    "StormLib/src/libtommath/bn_mp_to_signed_bin.c"
    "StormLib/src/libtommath/bn_mp_to_signed_bin_n.c"
    "StormLib/src/libtommath/bn_mp_to_unsigned_bin.c"
    "StormLib/src/libtommath/bn_mp_to_unsigned_bin_n.c"
    "StormLib/src/libtommath/bn_mp_toom_mul.c"
    "StormLib/src/libtommath/bn_mp_toom_sqr.c"
    "StormLib/src/libtommath/bn_mp_toradix.c"
    "StormLib/src/libtommath/bn_mp_toradix_n.c"
    "StormLib/src/libtommath/bn_mp_unsigned_bin_size.c"
    "StormLib/src/libtommath/bn_mp_xor.c"
    "StormLib/src/libtommath/bn_mp_zero.c"
    "StormLib/src/libtommath/bn_prime_tab.c"
    "StormLib/src/libtommath/bn_reverse.c"
    "StormLib/src/libtommath/bn_s_mp_add.c"
    "StormLib/src/libtommath/bn_s_mp_exptmod.c"
    "StormLib/src/libtommath/bn_s_mp_mul_digs.c"
    "StormLib/src/libtommath/bn_s_mp_mul_high_digs.c"
    "StormLib/src/libtommath/bn_s_mp_sqr.c"
    "StormLib/src/libtommath/bn_s_mp_sub.c"
    "StormLib/src/libtommath/bncore.c"
    "StormLib/src/lzma/C/LzFind.c"
    "StormLib/src/lzma/C/LzFindMt.c"
    "StormLib/src/lzma/C/LzmaDec.c"
    "StormLib/src/lzma/C/LzmaEnc.c"
    "StormLib/src/lzma/C/Threads.c"
    "StormLib/src/pklib/explode.c"
    "StormLib/src/pklib/implode.c"
    "StormLib/src/sparse/sparse.cpp"
    "StormLib/src/zlib/adler32.c"
    "StormLib/src/zlib/compress_zlib.c"
    "StormLib/src/zlib/crc32.c"
    "StormLib/src/zlib/deflate.c"
    "StormLib/src/zlib/inffast.c"
    "StormLib/src/zlib/inflate.c"
    "StormLib/src/zlib/inftrees.c"
    "StormLib/src/zlib/trees.c"
    "StormLib/src/zlib/zutil.c"
    "StormLib/src/jenkins/lookup3.c"
  ]
  defines = [""]
  defpath = rebase_path("StormLib/StormLib_dll/stormlib.def", ".", root_build_dir)
  ldflags = [
    "/DEF:$defpath",
  ]
  direct_dependent_configs = [":stormlib_config"]
}

shared_library("storm") {
  defines = ["Storm_dll_EXPORTS"]
  sources = ["StormLib/storm_dll/storm_dll.cpp"]
  defpath = rebase_path("StormLib/storm_dll/storm_dll.def", ".", root_build_dir)
  ldflags = [
    "/DEF:$defpath",
  ]
}
