import("//build/templates/afx.gni")

afx("wow_mapview_water_tile_effect") {
  source = "tile.afx"
  filename = "tile"
}

executable("wow_mapview_water") {
  sources = ["main.cc"]
  deps = [
    "//wow/base:wow_base",
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:appinit",
    ":wow_mapview_water_tile_effect",
  ]
}